# Voice-Input-Fcitx5

./: .gitignore  AGENTS.md  DESIGN.md  FIX.md  INSTALL.ai.md  README.md  config.json  hotwords.txt  install.sh  server.py  uninstall.sh
fcitx5-sherpa-bridge/: CMakeLists.txt  install_manifest.txt  sherpa-bridge.conf.in  sherpa-bridge.cpp  sherpa-bridge.h
scripts/: detect_env.sh  download_models.sh
